fix(acceptance) Implement acceptance test according to screen cast

--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -5,5 +5,4 @@ h1 Question list
 	  br
 	  p= question.body
 
-= button_to "Ask a question", new_question_path, method: :get
-end
+p= link_to 'Ask question', new_question_path
