--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,22 +1,6 @@
-doctype html
-html
-  head
-    title New Question
-
-  body
-    h1 New Question
-
-    #content
-      p Please write your question
-      = form_for @question do |f|
-			    = f.label :title
-			    br
-			    = f.text_field :title
-			    br
-			    = f.label :body
-			    br
-			    = f.text_area :body
-			    br
-			    = f.submit
-			    br
-			    = link_to 'Back', _back_url()
+= form_for @question do |f|
+  = f.label :title
+  = f.text_field :title
+  = f.label :body
+  = f.text_field :body
+  = f.submit 'Create'
