feature(acceptance) Add possibility to delete questions and answers

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -15,11 +15,13 @@ html
       h2 Answers:
       - @question.answers.each do |answer|
         = answer.body
+        - if (answer.user == current_user)
+          = button_to "Delete answer", question_answer_path(@question, answer), method: :delete
         br
 
       = button_to "Add Answer", new_question_answer_path(@question), method: :get
       br
       - if (@question.user == current_user)
-        = button_to "Delete question", question_path(@question.id), method: :delete
+        = button_to "Delete question", question_path(@question), method: :delete
       br
 			= link_to 'Back', questions_path
