--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -3,4 +3,5 @@
   = f.text_field :title
   = f.label :body
   = f.text_field :body
+  = f.hidden_field :user_id, value: current_user.id
   = f.submit 'Create'
