--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -8,6 +8,6 @@ h1 Questions list
 p= link_to 'Ask question', new_question_path
 
 - if user_signed_in?
-  =link_to('Logout', destroy_user_session_path, :method => :delete)
+  =link_to 'Logout', destroy_user_session_path, method: :delete
 - else
-  =link_to('Login', new_user_session_path)
+  =link_to 'Login', new_user_session_path
