--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,35 +1,13 @@
-doctype html
-html
-  head
-    title Show Question
+h1= @question.title
+p= @question.body
 
-  body
+.answers
+  = render 'answers'
 
-    h1 The question is:
+= form_for [@question, @answer], remote: true do |f|
+  = f.label :body, 'Your answer'
+  = f.text_area :body
+  = f.submit 'Create'
 
-    #content
-      p Here is your question:
-      = @question.title
-      br
-      = @question.body
-      h2 Answers:
-      - @question.answers.each do |answer|
-        - if answer.persisted?
-          = answer.body
-          - if user_signed_in? && current_user.author_of?(answer)
-            = button_to "Delete answer", question_answer_path(@question, answer), method: :delete
-      br
-      - if user_signed_in? && current_user.author_of?(@question)
-        = button_to "Delete question", question_path(@question), method: :delete
-      br
-			= link_to 'Back', questions_path
-
-      br
-      p Please write your answer below:
-      = form_for [@question, @answer] do |f|
-        = f.label :body
-        = f.text_area :body
-        br
-        = f.submit
-        br
-          = link_to 'Back', _back_url()
+- if user_signed_in? && current_user.author_of?(@question)
+  = button_to "Delete question", question_path(@question), method: :delete
