--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -2,7 +2,7 @@ h1= @question.title
 p= @question.body
 
 .answers
-  = render 'answers'
+  = render @question.answers
 
 = form_for [@question, @answer], remote: true do |f|
   = f.label :body, 'Your answer'
