--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,9 +5,12 @@ p= @question.body
   = render @question.answers
 
 = form_for [@question, @answer], remote: true do |f|
-  = f.label :body, 'Your answer'
-  = f.text_area :body
-  = f.submit 'Create'
+  p
+    = f.label :body, 'Your answer'
+  p
+    .answer-errors
+    = f.text_area :body
+    = f.submit 'Create'
 
 - if user_signed_in? && current_user.author_of?(@question)
   = button_to "Delete question", question_path(@question), method: :delete
