--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,5 +1,8 @@
-h1= @question.title
-p= @question.body
+- # h1= @question.title
+- # p= @question.body
+
+.question
+  = render @question
 
 .answers
   = render @question.answers
@@ -12,5 +15,6 @@ p= @question.body
     = f.text_area :body
     = f.submit 'Create'
 
-- if user_signed_in? && current_user.author_of?(@question)
-  = button_to "Delete question", question_path(@question), method: :delete
+- # - if user_signed_in? && current_user.author_of?(@question)
+- #   = button_to "Delete question", question_path(@question), method: :delete
+- #   p= link_to 'Edit question', '', class: 'edit-question-link', data: { question_id: @question.id }
