--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -4,7 +4,7 @@ p.b-body= @question.body
 - if user_signed_in? && current_user.author_of?(@question)
   = button_to "Delete question", question_path(@question), method: :delete
 
-- if user_signed_in? and question.persisted?
+- if user_signed_in? and question.persisted? and question.user == current_user
   p= link_to 'Edit question', '', class: 'edit-question-link', data: { question_id: @question.id }
   p
     = form_for @question, remote: true, html: { id: "edit-question-#{question.id}"} do |f|
