deleta answer with ajax

--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -4,5 +4,5 @@
   <% end %>
 <% else %>
   $('.answers').append('<%= j render @answer %>');
-  $('#answer_body').val('')
+  $('form.new_answer textarea').val('')
 <% end %>
