--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,6 +1,16 @@
 = form_for @question do |f|
-  = f.label :title
-  = f.text_field :title
-  = f.label :body
-  = f.text_field :body
-  = f.submit 'Create'
+  p
+    = f.label :title
+    = f.text_field :title
+  p
+    = f.label :body
+    = f.text_field :body
+
+  p Attachments:
+  p
+    = f.fields_for :attachments do |a|
+      = a.label :file
+      = a.file_field :file
+    end
+
+  p= f.submit 'Create'
