--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -3,7 +3,7 @@ p.b-body= @question.body
 p Attachments:
 ul
   - @question.attachments.each do |a|
-    li= a.file.file.filename
+    li= link_to a.file.identifier, a.file.url
 
 - if user_signed_in? && current_user.author_of?(@question)
   = button_to "Delete question", question_path(@question), method: :delete
