Perfom all actions by screencast

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -10,4 +10,9 @@
   p
     .answer-errors
     = f.text_area :body
+
+  p
+    = f.fields_for :attachments do |a|
+      = a.label :file
+      = a.file_field :file
     = f.submit 'Create'
