--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,6 +2,11 @@
   - if answer.is_best?
     p= 'Best answer!'
   p= answer.body
+
+  ul
+    - answer.attachments.each do |a|
+      li= link_to a.file.identifier, a.file.url
+
   - if user_signed_in? && current_user.author_of?(answer)
     = button_to "Delete answer", question_answer_path(@question, answer), method: :delete, remote: true
 
