--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -2,8 +2,11 @@ h1.b-title= @question.title
 p.b-body= @question.body
 p Attachments:
 ul
-  - @question.attachments.each do |a|
-    li= link_to a.file.identifier, a.file.url
+  - @question.attachments.each do |attachment|
+    li id="attachment_#{attachment.id}"
+      = link_to attachment.file.identifier, attachment.file.url
+      - if user_signed_in? and question.user == current_user
+        = button_to "Delete attachment", question_attachment_path(@question, attachment), { remote: true, method: :delete, class: 'b-delete-attachment' }
 
 - if user_signed_in? && current_user.author_of?(@question)
   = button_to "Delete question", question_path(@question), method: :delete
