--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,7 +4,7 @@
 .answers
   = render @question.answers.best_first
 
-= form_for [@question, @answer], remote: true do |f|
+= nested_form_for [@question, @answer], remote: true do |f|
   p
     = f.label :body, 'Your answer'
   p
@@ -13,6 +13,10 @@
 
   p
     = f.fields_for :attachments do |a|
-      = a.label :file
-      = a.file_field :file
-    = f.submit 'Create'
+      div class=("b-file-input-#{(a.index).to_s.dasherize}" )
+        = a.label :file
+        = a.file_field :file
+  p
+    = f.link_to_add "Add an attachment", :attachments
+
+  = f.submit 'Create'
