--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -7,7 +7,7 @@
     - answer.attachments.each do |attachment|
       li id="attachment_#{attachment.id}"
         = link_to attachment.file.identifier, attachment.file.url
-        - if user_signed_in? and answer.user == current_user
+        - if user_signed_in? and current_user.author_of?(answer)
           = button_to "Delete attachment", question_answer_attachment_path(@question, answer, attachment), { remote: true, method: :delete, class: 'b-delete-attachment' }
 
   - if user_signed_in? && current_user.author_of?(answer)
