--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -7,7 +7,14 @@ ul
       = link_to attachment.file.identifier, attachment.file.url
       - if user_signed_in? and current_user.author_of?(question)
         = button_to "Delete attachment", question_attachment_path(@question, attachment), { remote: true, method: :delete, class: 'b-delete-attachment' }
-
+.votes
+  'Votes:
+  .vote-count
+    = "#{@question.balanced_count}"
+  - if user_signed_in? && question.persisted? && !@question.voted_by_current_user
+    .vote-buttons
+      = button_to '+1', question_votes_path(@question, positive: true), method: :post, remote: true
+      = button_to '-1', question_votes_path(@question, positive: false), method: :post, remote: true
 - if user_signed_in? && current_user.author_of?(@question)
   = button_to "Delete question", question_path(@question), method: :delete
 
